fixed scrollbar css & visibility

--- a/homep.css
+++ b/homep.css
@@ -9,7 +9,8 @@ body, html {
 
 html {
   
-overflow: scroll;
+  overflow: scroll;
+
 }
 
 body {
@@ -17,8 +18,12 @@ body {
     font-family: "Marvel", sans-serif;
     min-height: 100vh;
     min-width: 100vw;
-  
+ 
 }
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
 
 
 
@@ -261,7 +266,7 @@ margin-left: -30px;
 // border: solid blur 10px;
   backdrop-filter: blur(10px); 
   border-radius: 30px;
-  margin-top: -100px;
+  margin-top: -300px;
   padding-top: 50px;
 }
 
@@ -424,7 +429,7 @@ margin-left: -30px;
   width: 500px;
   height: 750px;
   position: relative;
-  overflow:  hidden;
+  overflow: hidden;
   margin-left: 1450px;
   margin-top: -1000px; 
 }
